--- a/src/App.scss
+++ b/src/App.scss
@@ -163,3 +163,9 @@ body::-webkit-scrollbar-thumb {
 .swiper-slide {
   width: auto;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
